<resources>
    <string name="app_name">TicTacToe2</string>
    <string name="tic_tac_toe">TIC TAC TOE</string>
    <string name="_1_player">1 Player</string>
    <string name="two_players">Two Players</string>
    <string name="_3x3">3x3</string>
    <string name="_5x5">5x5</string>
    <string name="_7x7">7x7</string>
    <string name="difficuly">Difficuly:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="settings">SETTINGS</string>
    <string name="effects_colon">Effects:</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="speaker">Speaker</string>
    <string name="scores_colon">Scores:</string>
    <string name="draws_colon">Draws:</string>
    <string name="circle">Circle</string>
    <string name="cross">Cross</string>
    <string name="turn">Turn:</string>
    <string name="single_player">Single Player</string>
    <string name="choose_grid">CHOOSE GRID</string>
    <string name="field_already_occupied_message">That field is already occupied.</string>
    <string name="wins_colon">Wins:</string>
    <string name="losses_colon">Losses:</string>
    <string name="quit">Quit</string>
    <string name="exampletxt">ExampleTXT</string>

    <string-array name="mainActivityButtonNames">
        <item>Single Player</item>
        <item>Two Players</item>
        <item>Settings</item>
        <item>Leaderboard</item>
    </string-array>

    <string-array name="twoPlayersActivityButtonNames">
        <item>On the device</item>
        <item>Via Internet</item>
        <item>Via Bluetooth</item>
        <item>Via Wi-FI directly</item>
    </string-array>
</resources>
