<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/appBackground"
    >


    <TextView
        android:id="@+id/settingsHeader"
        style="@style/Header"
        android:text="@string/settings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/difficulyTextID"
        android:textColor="@color/settingsSecondHeaderColor"
        style="@style/Header.SettingsFontStyle"
        android:text="@string/difficuly"
        app:layout_constraintLeft_toLeftOf="@+id/easyTextID"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsHeader" />

    <TextView
        android:id="@+id/easyTextID"
        style="@style/Header.SettingsFontStyle"
        android:textColor="@drawable/settings_text_selector"
        android:clickable="true"
        android:textIsSelectable="false"
        android:gravity="left"
        android:text="@string/easy"
        android:onClick="difficulyChanged"
        app:layout_constraintEnd_toStartOf="@+id/mediumTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintRight_toLeftOf="@+id/mediumTextID"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/mediumTextID"
        android:layout_marginBottom="0dp"
        app:layout_constraintTop_toTopOf="@+id/mediumTextID"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/mediumTextID"
        style="@style/Header.SettingsFontStyle"
        android:textColor="@drawable/settings_text_selector"
        android:clickable="true"
        android:text="@string/medium"
        android:foregroundGravity="left"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/difficulyTextID" />

    <TextView
        android:id="@+id/hardTextID"
        style="@style/Header.SettingsFontStyle"
        android:textColor="@drawable/settings_text_selector"
        android:clickable="true"
        android:gravity="right"
        android:text="@string/hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/mediumTextID"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/mediumTextID"
        android:layout_marginBottom="0dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintLeft_toRightOf="@+id/mediumTextID"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"

        />
</android.support.constraint.ConstraintLayout>