<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/appBackground"
    android:padding="16dp"
    >
    <TextView
        android:id="@+id/turnText"
        style="@style/InGameText"
        android:layout_marginStart="0dp"
        android:text="@string/turn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/turnValueID"
        style="@style/InGameText"
        android:text="@string/exampletxt"
        app:layout_constraintTop_toTopOf="@+id/turnText"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/turnText"
        android:layout_marginBottom="0dp"
        app:layout_constraintLeft_toRightOf="@+id/turnText"
        android:layout_marginStart="@dimen/inGameTextSeparationSpace" />

    <ImageView
        android:id="@+id/settingsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:padding="4dp"
        android:contentDescription="@string/settings"
        android:src="@drawable/ic_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>