<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    >

    <TextView
        android:id="@+id/effectsHeaderID"
        android:textColor="@color/settingsSecondHeaderColor"
        style="@style/Header.SettingsFontStyle"
        android:text="@string/effects"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        style="@style/Header.SettingsFontStyle"
        android:buttonTint="@color/checkboxTint"
        android:id="@+id/effectsSoundID"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/effectsHeaderID"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/effectsHeaderID"
        android:text="@string/sound"
        />

    <CheckBox
        style="@style/Header.SettingsFontStyle"
        android:buttonTint="@color/checkboxTint"
        android:id="@+id/effectsVibrationID"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/effectsSoundID"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/effectsSoundID"
        android:text="@string/vibration" />

    <CheckBox
        style="@style/Header.SettingsFontStyle"
        android:buttonTint="@color/checkboxTint"
        android:id="@+id/effectsVoiceID"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/effectsVibrationID"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/effectsSoundID"
        android:text="@string/speaker" />


</android.support.constraint.ConstraintLayout>