<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/appBackground"
    >
    <TextView
        style="@style/InGameText"
        android:id="@+id/hardnessDisplayTextId"
        android:text="Hardness Level"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="8dp"
        android:layout_gravity="end"
        android:textSize="16sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="16dp"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                style="@style/InGameText"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wins_colon"
                android:gravity="right"
                android:id="@+id/winsText"
                />
            <TextView
                style="@style/InGameText"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="0"
                android:gravity="left"
                android:id="@+id/winsValue"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
        <TextView
            style="@style/InGameText"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/losses_colon"
            android:gravity="right"
            android:id="@+id/lossesCounter"
            />
        <TextView
            style="@style/InGameText"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="0"
            android:gravity="left"
            android:id="@+id/lossesValue"
            />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center"
            >
        <TextView
            style="@style/InGameText"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/draws_colon"
            android:id="@+id/drawsText"
            />
        <TextView
            style="@style/InGameText"
            android:paddingLeft="8dp"
            android:paddingStart="8dp"
            android:textSize="16sp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="0"
            android:gravity="left"
            android:id="@+id/drawsValue"
            />
        </LinearLayout>
    </LinearLayout>

    <Button
        style="@style/Button"
        android:id="@+id/exitGameButtonId"
        android:text="Wyjście"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="40dp"
        android:paddingStart="40dp"
        android:paddingRight="40dp"
        android:paddingEnd="40dp"
        android:layout_marginBottom="16dp"
        />
</LinearLayout>